# soulbeet

./: .dockerignore  Cargo.toml  Dockerfile  LICENSE  README.md  beets_config.yaml  docker-compose.yml
.github/workflows/: e2e.yml  image-build-push.yml  release.yml
api/: Cargo.toml
api/migrations/: 20260330000000_default_download_folder.sql  20260716000000_require_flac_only.sql
api/src/: auth.rs  config.rs  db.rs  globals.rs  lib.rs
api/src/models/: discovery_playlist.rs  folder.rs  user.rs  user_settings.rs
api/src/server_fns/: auth.rs  discovery.rs  download.rs  folder.rs  guard.rs  mod.rs  navidrome.rs  search.rs  settings.rs  system.rs  user.rs
api/src/server_fns/download/: auto_download.rs  import.rs  mod.rs  monitor.rs  process.rs  utils.rs
desktop/: Cargo.toml
desktop/src/: main.rs
docs/: beets-plugins.md
e2e/: .gitignore  compose.e2e.yml  eslint.config.js  package-lock.json  package.json  playwright.config.ts  tsconfig.json
e2e/fixtures/: dataset.ts  generate.ts
e2e/helpers/: app.ts  control.ts  env.ts  files.ts
e2e/scripts/: dev-stack.sh
e2e/stubs/: Dockerfile
e2e/stubs/src/: main.ts  mb-server.ts  router.ts  slskd-server.ts  slskd-state.ts
e2e/tests/: auth.spec.ts  downloads.spec.ts  failures.spec.ts  manual.spec.ts  mobile.spec.ts  navidrome.spec.ts  search.spec.ts  settings.spec.ts  setup.app.ts
lib/shared/: Cargo.toml
lib/shared/src/: download.rs  lib.rs  library.rs  metadata.rs  navidrome.rs  recommendation.rs  slskd.rs  system.rs
lib/soulbeet/: Cargo.toml
lib/soulbeet/src/: error.rs  http.rs  lastfm.rs  lib.rs  musicbrainz.rs  services.rs  traits.rs
lib/soulbeet/src/beets/: mod.rs
lib/soulbeet/src/engine/: lastfm_pipeline.rs  listenbrainz_pipeline.rs  mod.rs
lib/soulbeet/src/listenbrainz/: client.rs  mod.rs
lib/soulbeet/src/navidrome/: client.rs  models.rs
lib/soulbeet/src/slskd/: client.rs  mod.rs  models.rs  processing.rs
lib/soulful/: Cargo.toml
lib/soulful/src/: musicbrainz.rs
lib/soulful/src/beets/: mod.rs
lib/soulful/src/slskd/: client.rs  mod.rs  models.rs  utils.rs
mobile/: Cargo.toml
mobile/src/: main.rs
ui/: Cargo.toml
ui/src/: auth.rs  health_context.rs  layout.rs  lib.rs  navbar.rs  settings_context.rs
ui/src/components/: confirm_modal.rs  cover_art.rs  downloads.rs  error_display.rs  footer.rs  mod.rs  modal.rs  status.rs
ui/src/components/album/: footer.rs  header.rs  mod.rs  track_item.rs  track_list.rs
ui/src/components/discovery/: mod.rs
ui/src/components/downloads/: item.rs  mod.rs
ui/src/components/login/: mod.rs
ui/src/components/search/: album.rs  albumgroup.rs  context.rs  download_icon.rs  download_options_menu.rs  download_results.rs  edition.rs  folder_chip.rs  inline_track_panel.rs  inline_track_row.rs  mod.rs  search_type_toggle.rs  toast.rs  track.rs
ui/src/components/settings/: app_config.rs  folder_manager.rs  preferences.rs  user_manager.rs
ui/src/components/simple/: button.rs  checkbox.rs  mod.rs
web/: Cargo.toml  README.md
web/assets/: input.css  tailwind.css
web/src/: auth.rs  main.rs  storage.rs  websocket.rs
web/src/views/: login.rs  mod.rs  search.rs  settings.rs
