[workspace]
resolver = "2"
members = [
  "ui",
  "web",
  # "desktop",
  # "mobile",
  "api",
  "lib/soulbeet",
]

[workspace.dependencies]
dioxus = { version = "0.7.2" }

# workspace
ui = { path = "ui" }
api = { path = "api" }
shared = { path = "lib/shared" }
soulbeet = { path = "lib/soulbeet" }

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
