[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
soulful = { workspace = true, optional = true }
shared = { workspace = true }
chrono = { version = "0.4.42", features = ["wasm-bindgen"] }
serde = { version = "1.0.226", features = ["derive"] }
jsonwebtoken = { version = "10.2.0", features = [
  "rust_crypto",
], optional = true }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "uuid",
], optional = true }
argon2 = { version = "0.5.3", optional = true }
uuid = { version = "1.19.0", features = ["v4", "serde"], optional = true }
rand = { version = "0.9.2", optional = true }
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "fs",
], optional = true }
tracing = "0.1.41"

[build-dependencies]
dotenvy = "0.15.7"

[features]
default = []
server = [
  "dep:soulful",
  "dep:sqlx",
  "dep:tokio",
  "dep:uuid",
  "dep:argon2",
  "dep:rand",
  "dep:jsonwebtoken",
]
