[package]
name = "api"
version = "0.2.3"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
soulbeet = { workspace = true, optional = true }
shared = { workspace = true }
chrono = { version = "0.4.42", features = ["wasm-bindgen"] }
serde = { version = "1.0.226", features = ["derive"] }
tower-cookies = { version = "0.11.0", optional = true }
jsonwebtoken = { version = "10.2.0", features = [
  "rust_crypto",
], optional = true }
sqlx = { version = "0.8.6", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "uuid",
], optional = true }
argon2 = { version = "0.5.3", optional = true }
uuid = { version = "1.19.0", features = ["v4", "serde"], optional = true }
rand = { version = "0.9.2", optional = true }
tokio = { version = "1.48.0", features = [
  "rt-multi-thread",
  "fs",
], optional = true }
tokio-util = { version = "0.7", optional = true }
tracing = "0.1.41"
axum = { version = "0.8.7", optional = true }

[build-dependencies]
dotenvy = "0.15.7"

[features]
default = []
server = [
  "dep:soulbeet",
  "dep:sqlx",
  "dep:tokio",
  "dep:tokio-util",
  "dep:uuid",
  "dep:argon2",
  "dep:rand",
  "dep:jsonwebtoken",
  "dep:tower-cookies",
  "dep:axum",
]
