[package]
name = "ui"
version = "0.2.2"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
api = { workspace = true }
shared = { workspace = true }
web-sys = { version = "0.3.83", features = ["Storage", "Window", "Location"] }
serde_json = "1.0.145"
futures = "0.3.31"
gloo-timers = { version = "0.3.0", features = ["futures"] }

[features]
default = []
server = ["api/server"]
