[package]
name = "ui"
version = "0.3.4"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["fullstack"] }
api = { workspace = true }
shared = { workspace = true }
web-sys = { version = "0.3.91", features = ["Storage", "Window", "Location"] }
serde_json = "1.0.149"
futures = "0.3.32"
gloo-timers = { version = "0.3.0", features = ["futures"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = []
server = ["api/server"]
