[package]
name = "web"
version = "0.2.2"
edition = "2021"

[dependencies]
dioxus = { workspace = true, features = ["router", "fullstack"] }
ui = { workspace = true }
api = { workspace = true }
shared = { workspace = true }
futures = "0.3.31"
web-sys = { version = "0.3.83", features = ["Storage", "Window", "Location"] }
url = "2.5.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
gloo-timers = { version = "0.3.0", features = ["futures"] }
chrono = { version = "0.4.42", features = ["serde", "wasm-bindgen"] }
tower-cookies = { version = "0.11.0", optional = true }
axum = { version = "0.8.7", optional = true }

[features]
default = []
web = ["dioxus/web"]
server = ["dioxus/server", "ui/server", "dep:tower-cookies", "dep:axum"]
