[package]
name = "soulbeet"
version = "0.2.2"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["sync", "time", "process"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1.41"
env_logger = "0.11.8"
regex = "1"
thiserror = "2.0.16"
url = "2"
chrono = { version = "0.4.42" }
async-trait = "0.1"
itertools = "0.14.0"
musicbrainz_rs = { git = "https://github.com/RustyNova016/musicbrainz_rs", rev = "44c25c88bc776309b59a7a9d71d91b59aaa44781" }
shared = { workspace = true }
futures = "0.3.31"
